--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Dashboard_13_09_22</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aspernatur, aliquam obcaecati quibusdam provident quo, reprehenderit quia veritatis tempora animi, fugiat culpa? Iure, maiores dolorum quam illo laboriosam beatae magnam!</p>
 </body>
 </html>
